--- a/src/app/pages/sidemenu/finitee-services/service-required/service-required-view/service-required-view.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-required/service-required-view/service-required-view.page.html
@@ -18,8 +18,9 @@
         <h3>{{logInfo.DisplayName}}</h3>
         <p>3 mins ago</p>
       </ion-label>
-      <ion-label slot="end" class="fd-views-label">
-        <p>300 views</p>
+      <ion-label style="display: flex; text-align: center; justify-content: center; align-items: center; background-color: #F0F5F7;  width: 130px;
+      height: 34px; border-radius: 17px;" slot="end" class="fd-views-label">
+        <p style="font-size:14px ;">300 views</p>
         <ion-icon name="heat-map-icon"></ion-icon>
       </ion-label>
     </ion-item>
@@ -47,7 +48,7 @@
     </ion-item>
 
     <ion-item>
-      <ion-text class="desc" style="margin-bottom: 10px;">
+      <ion-text class="desc" style="margin-bottom: 10px; font-size: 16px;">
         {{serviceObj.Description}}
       </ion-text>
     </ion-item>
