--- a/src/app/pages/sidemenu/profile/edit-contact/edit-contact.page.html
+++ b/src/app/pages/sidemenu/profile/edit-contact/edit-contact.page.html
@@ -113,7 +113,8 @@
     </ion-item>
 
 
-    <ion-button class="fi-submit-btn" expand="block" shape="round" [disabled]="!form.valid" type="submit">
+    <ion-button  style="font-size: 20px;"
+    class="fi-submit-btn" expand="block" shape="round" [disabled]="!form.valid" type="submit">
       Save
     </ion-button>
   </form>
