--- a/src/app/pages/sidemenu/profile/edit-education/edit-education.page.html
+++ b/src/app/pages/sidemenu/profile/edit-education/edit-education.page.html
@@ -197,7 +197,7 @@
       </ion-popover>
 
       <br>
-      <ion-button type="submit" [disabled]="form.invalid" expand="block" class="fi-footer-btn" shape="round"
+      <ion-button style="font-size: 20px;" type="submit" [disabled]="form.invalid" expand="block" class="fi-footer-btn" shape="round"
         color="primary">
         Save
       </ion-button>
