--- a/src/app/pages/sidemenu/profile/edit-personal/edit-personal.page.html
+++ b/src/app/pages/sidemenu/profile/edit-personal/edit-personal.page.html
@@ -138,7 +138,7 @@
     </ion-item>
 
     <!-- [disabled]="!form.valid" -->
-    <ion-button class="fi-submit-btn" expand="block" shape="round"  (click)="saveUserProfile()" >
+    <ion-button style="font-size: 17px;" class="fi-submit-btn" expand="block" shape="round"  (click)="saveUserProfile()" >
       Save
     </ion-button>
 
