--- a/src/app/pages/sidemenu/sales-listing/create-edit-sales-item/create-edit-sales-item.page.scss
+++ b/src/app/pages/sidemenu/sales-listing/create-edit-sales-item/create-edit-sales-item.page.scss
@@ -453,7 +453,7 @@ ion-modal {
 .locationInput{
  
   line-height: 1.5;
-  margin-left: 17px;
+  margin-left: 11px;
   margin-right: -33px;
 }
 
@@ -464,4 +464,7 @@ ion-input {
   --placeholder-color: #A8A8A8;
   --padding-end: 19px;
   --padding-start: 19px;
+}
+.viewby{
+  margin-top: 10px;
 }
