--- a/src/app/core/components/post/post-items/post-items.component.scss
+++ b/src/app/core/components/post/post-items/post-items.component.scss
@@ -20,13 +20,17 @@
 }
  */
 
+//  .input-wrapper{
+//   height: 60px;
+//  }
+
 ion-header {
   background-color: #ffffff !important;
   padding: 10px 15px;
 }
 
 ion-toolbar {
-  --background: #EAF1F4;
+  --background:#EAF1F4;
   border-radius: 26px;
   --height: 51px;
 }
@@ -61,6 +65,7 @@ ion-title {
     min-height: 400px;
     max-height: 460px;
     box-shadow: none;
+    overflow: visible;
 
     /*  & ion-img {
       max-width: 100%;
@@ -77,7 +82,7 @@ ion-title {
 }
 
 .profileBg{
-  background-color: #EAF1F4;
+  background-color: none;
   padding: 2px;
   min-height: 66px;
   padding-top: 9px;
@@ -98,6 +103,8 @@ ion-list {
     --background: transparent;
     // background-color: #03A9F5;
     min-height: 28px;
+    overflow: visible;
+    margin-bottom:10px ;
 
     &div{
       display: contents;
@@ -138,7 +145,7 @@ ion-list {
 ion-text {
   p {
     padding: 10px 14px;
-    font: normal normal normal 16px/21px SF Pro Display;
+    font: normal normal normal 17px/21px SF Pro Display;
     letter-spacing: 0.22px;
     color: #1A3253;
     margin: 0;
@@ -157,7 +164,7 @@ ion-item {
 
   & div.stats {
     h4 {
-      font: normal normal bold 13px/21px SF Pro Display;
+      font: normal normal bold 14px/21px SF Pro Display;
       letter-spacing: 0.04px;
       color: #1A3253;
       padding: 0 3px;
