--- a/src/app/pages/map/map-search/map-search.component.scss
+++ b/src/app/pages/map/map-search/map-search.component.scss
@@ -4,14 +4,29 @@ ion-card {
 
 ion-header.headth {
 
-    box-shadow: 0px 5px 6px rgb(0 0 0 / 5%);
+
     padding-bottom: 0px;
+    padding-top: 0px;
+    background-image: none !important;
+}
+.header-md::after {
+background-image: none !important;
+}
+.searchsonar{
+    height: 25px;
 }
 
 .submenu ion-card {
     margin: 0px 10px !important;
 }
-
+.list-md{
+    padding-top: 0px !important;
+    margin-top: 10px !important;
+}
+.medbf{
+    margin-top: 2px;
+    
+}
 ion-range {
 
     div[slot="start"],
@@ -25,6 +40,7 @@ ion-range {
     --min-height: inherit;
     --background: transparent;
     border-radius: 0px;
+    height: 20px;
 }
 
 span.dott {
@@ -59,6 +75,7 @@ ion-range {
 
 .search-button {
     height: 40px !important;
+    font-size: 18px;
 }
 
 /* .stop-ping {
@@ -155,9 +172,10 @@ ion-item {
 
 .search-box{
     background: #EAF1F4;
-    width: 100%;
+    width: 392px;
     border-radius: 26px;
     padding: 0px 50px;
+    height: 51px;
 }
 
 .input-field{
@@ -165,3 +183,32 @@ ion-item {
     letter-spacing: 0.22px;
     height: 34px;
 }
+
+.locationsearch{
+    width: 241px !important;
+    height: 34px;
+    background-color: #EAF1F4;
+   
+}
+.linemark{
+display: flex;
+justify-content: center;
+align-items: center;
+margin-left: 15px;
+margin-right: 15px;
+margin-bottom: 10px;
+margin-top: 5px;
+
+
+
+}
+.line{
+    width: 100%;
+   
+    height: 2px;
+    background-color: #cdced357;
+}
+.ion-modal > .ion-page{
+    margin-top: 10px !important;
+}
+
