--- a/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.scss
+++ b/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.scss
@@ -372,12 +372,12 @@ ion-modal {
 .locationInput{
  
   line-height: 1.5;
-  margin-left: 17px;
+  margin-left: 10px;
   margin-right: -33px;
 }
 
 .input-label{
-  font: normal normal 600 13px/24px SF Pro Display;
+  font: normal normal 600 15px/24px SF Pro Display;
   letter-spacing: 0.21px;
   color: #505050;
   margin-left: 19px;
@@ -401,4 +401,7 @@ ion-input {
   --placeholder-color: #A8A8A8;
   --padding-end: 19px;
   --padding-start: 19px;
+}
+.viewby{
+  margin-top: 10px;
 }
