--- a/src/app/pages/sidemenu/finitee-services/service-required/service-required-list/service-required-list.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-required/service-required-list/service-required-list.page.html
@@ -1,7 +1,8 @@
 <ion-header class="ion-no-border">
   <ion-toolbar class="display-flex ion-align-items-center">
     <ion-buttons slot="start">
-      <app-notification-icon></app-notification-icon>
+      <ion-back-button icon="assets/icons/screen-wise-icons/Canvas screens icons as svg/Back icon.svg">
+      </ion-back-button>
     </ion-buttons>
     <ion-title>Service Required</ion-title>
     <ion-buttons slot="end">
@@ -18,8 +19,8 @@
     </ion-text>
   </ion-segment>
   <ion-grid>
-    <ng-container *ngFor="let i of serviceRequiredService.serviceList;">
-      <ion-row class="ion-align-items-center" (click)="viewDetails(i.Id)" *ngIf="i.DaysLeft >= 0">
+    <ng-container *ngFor="let i of serviceRequiredService.serviceList; let last = last">
+      <ion-row   class="ion-align-items-center" (click)="viewDetails(i.Id)" *ngIf="i.DaysLeft >= 0">
         <ion-col size="4">
           <ion-img [src]="appConstants.mediaPrefix+i.ImageList[0]">
           </ion-img>
@@ -39,17 +40,22 @@
               </ion-label>
               <ion-buttons>
                 <ion-button class="fi-delete-btn" shape="round" (click)="delete(i.Id) ; $event.stopPropagation();">
-                  <ion-icon style="font-size: 13px;" name="delete"></ion-icon>
+                  <ion-icon style="font-size: 16px;" name="delete"></ion-icon>
                 </ion-button>
                 &nbsp;
                 <ion-button class="fi-edit-btn" shape="round" (click)="edit(i.Id) ; $event.stopPropagation();">
-                  <ion-icon style="font-size: 13px;" name="edit"></ion-icon>
+                  <ion-icon style="font-size: 16px;" name="edit"></ion-icon>
                 </ion-button>
               </ion-buttons>
             </ion-card-content>
           </ion-card>
         </ion-col>
       </ion-row>
+      <div *ngIf="!last" style="display: flex; align-items: center; justify-content: center; margin-top: 10px; margin-bottom: 15px;">
+        <div style="background-color: #d2d3d9; width: 100%; padding-left: 20px; padding-right: 20px; height: 2px;">
+
+        </div>
+      </div>
     </ng-container>
   </ion-grid>
 
