--- a/src/app/pages/sidemenu/settings-privacy/connections/connections.page.scss
+++ b/src/app/pages/sidemenu/settings-privacy/connections/connections.page.scss
@@ -6,7 +6,7 @@ ion-header {
   
   ion-toolbar {
     --background: #EAF1F4;
-    border-radius: 26px;
+    border-radius: none !important;
     height: 51px;
     display: flex;
     align-items: center;
@@ -48,11 +48,11 @@ ion-header {
   
     & ion-toolbar {
       --background: #EAF1F4;
-      border-radius: 26px;
+      border-radius:none !important;
       height: 40px;
       display: flex;
       align-items: center;
-      margin-left: 12px;
+      margin-left: 0px;
       margin-bottom: 10px;
       width:auto;
     }
@@ -91,7 +91,8 @@ ion-header {
   
       & > ion-item {
         --min-height: 30px;
-        margin-bottom: 0;
+       margin-bottom: 10px;
+       margin-top: 10px;
   
         &:not(:last-of-type) {
           border-bottom: 1px solid rgba(26, 50, 83, 0.23);
@@ -100,6 +101,7 @@ ion-header {
   
         & ion-text {
           padding: 0 10px;
+          margin-left: 0px;
   
           h3 {
             font: normal normal 600 15px/24px SF Pro Display;
