--- a/src/app/pages/sidemenu/settings-privacy/settings-privacy.page.html
+++ b/src/app/pages/sidemenu/settings-privacy/settings-privacy.page.html
@@ -11,7 +11,7 @@
 <ion-content>
   <ng-container *ngIf="loaded">
 
-    <ion-toolbar>
+    <!-- <ion-toolbar>
       <ion-text>Account Type</ion-text>
     </ion-toolbar>
 
@@ -60,7 +60,7 @@
           (ionChange)="handleToggleChange($event, 'G')"
         ></ion-toggle>
       </ion-item>
-    </ion-list>
+    </ion-list> -->
     
     <!-- <ion-list>
       <ion-item lines="none">
@@ -95,6 +95,7 @@
       </ion-buttons>
       <ion-text>Sonar</ion-text>
     </ion-toolbar>
+    <div class="settingsline"></div>
 
     <!-- <ion-list>
       <ion-item lines="none">
@@ -141,6 +142,7 @@
       </ion-buttons>
       <ion-text>Canvas</ion-text>
     </ion-toolbar>
+    <div class="settingsline"></div>
 
     <!-- <ion-toolbar>
       <ion-buttons slot="primary">
@@ -175,6 +177,7 @@
       </ion-buttons>
       <ion-text>Connection</ion-text>
     </ion-toolbar>
+    <div class="settingsline"></div>
 
     <ion-toolbar>
       <ion-buttons slot="primary">
@@ -182,6 +185,7 @@
       </ion-buttons>
       <ion-text>Chat</ion-text>
     </ion-toolbar>
+    <div class="settingsline"></div>
 
     <ion-toolbar *ngIf="!privacySetting.FreeUserType">
       <ion-buttons slot="primary">
@@ -191,7 +195,7 @@
       <!-- <ion-title>></ion-title> -->
     </ion-toolbar>
 
-    <ion-list>
+    <!-- <ion-list>
       <ion-item lines="none">
         <ion-text>
           <h3>eProfile viewable by</h3>
@@ -215,7 +219,7 @@
         </ion-text>
         <ion-toggle slot="end" [(ngModel)]="privacySetting.AllowToReferCanvas"></ion-toggle>
       </ion-item>
-    </ion-list>
+    </ion-list> -->
 
     <ion-toolbar >
       <ion-text>eCard</ion-text>
