--- a/src/app/pages/sidemenu/shopping-listing/shopping-list/shopping-list.page.html
+++ b/src/app/pages/sidemenu/shopping-listing/shopping-list/shopping-list.page.html
@@ -1,21 +1,22 @@
 <ion-header class="ion-no-border">
   <ion-toolbar class="display-flex ion-align-items-center">
     <ion-buttons slot="start">
-      <app-notification-icon></app-notification-icon>
+      <ion-back-button icon="assets/icons/screen-wise-icons/Canvas screens icons as svg/Back icon.svg">
+      </ion-back-button>
     </ion-buttons>
     <ion-title>Shopping List</ion-title>
-    <ion-buttons slot="end">
+    <ion-buttons  slot="end">
       <ion-button (click)="edit()">
         <ion-icon name="pencil-outline"></ion-icon>
       </ion-button>
-      <ion-button>
-        <ion-icon name="menu-outline"></ion-icon>
-      </ion-button>
+      <!-- <ion-button>
+        <ion-icon style="font-size: 26px;" name="menu-outline"></ion-icon>
+      </ion-button> -->
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content >
 
   <ion-grid  *ngIf="salesService.shoppingListWords.length > 0" class="box-shadow">
     <ion-row>
@@ -26,10 +27,10 @@
     </ion-row>
   </ion-grid>
 
-  <ion-item *ngFor="let i of salesService.shoppingListWords" class="ion-no-padding ion-no-margin">
+  <ion-item style="margin-top: 10px;" *ngFor="let i of salesService.shoppingListWords" class="ion-no-padding ion-no-margin">
     <ion-grid style="text-align: center; font-size: 13px; font-weight: 500;">
       <ion-row>
-        <ion-col size="4">{{i.Word}}</ion-col>
+        <ion-col style="font-weight: 600;" size="4">{{i.Word}}</ion-col>
         <ion-col size="2">{{i.Price}}</ion-col>
         <ion-col size="4">{{i.Condition}}</ion-col>
         <ion-col size="2">{{i.Distance}}</ion-col>
@@ -46,6 +47,7 @@
     </div>
   </ng-container>
 </ion-content>
-
-<ion-button (click)="viewMatchedResult()" style="text-transform: none;" shape="round" expand="full" class="save-button">
-  View all matches</ion-button>
+<div style="display: flex; justify-content: center; align-items: center;">
+  <ion-button (click)="viewMatchedResult()" style="text-transform: none; font-size: 20px; height: 46px; width: 336px; margin-bottom: 10px;" shape="round" expand="full" class="save-button">
+    View all matches</ion-button>
+</div>
